# UCS-654-tops-is-web-service

./: README.md  __init__.py  app.py  data.csv  index.html  pyproject.toml  requirements.txt  setup.py  style.css  topsis.py
